- Add original title, move packages, add default youtube intent

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">TMDB_compose</string>
+
+    <string name="title">Title :  %1$S </string>
+    <string name="original_title">%1$S</string>
+    <string name="release_date">Release date : %1$s </string>
+
+
 </resources>
